<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/background_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha="0.03"
            android:clickable="true"
            android:src="@drawable/home_menu_bg_click" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha="0.03"
            android:clickable="true"
            android:src="@drawable/home_menu_bg_click" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="320dp"
            android:layout_height="400dp"
            android:layout_centerInParent="true"
            android:paddingTop="70dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_add"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#2ea67f"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/register"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/Username"
                                android:inputType="textPersonName"
                                android:paddingBottom="2dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="13sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/Password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="13sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/et_repeatpassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/repeat_password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="13sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/et_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:paddingBottom="2dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="13sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_go"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bt_shape_2"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:text="@string/next"
                        android:textColor="#2fa881"></Button>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:src="@drawable/plus_x"
                android:transitionName="loginFab"
                app:fabSize="normal" />
        </FrameLayout>

    </RelativeLayout>
</FrameLayout>
